--- a/PirateDropboxClient/.classpath
+++ b/PirateDropboxClient/.classpath
@@ -3,5 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="img"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/library"/>
+	<classpathentry kind="lib" path="/home/julioserafim/Trab_Redes/PirarateDropboxServer/libs/gson-2.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
